fixed cards overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,9 @@ body {
 .col-md-3 {
   float: right;
   width: 50%;
+  overflow: auto;
+  resize: vertical;
+
 
 }
 
@@ -145,13 +148,16 @@ body {
 .d3-card {
   background-color: rgba(255,255,255,0.9);
 }
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+/* Responsive layout - when the screen is less than 700px wide,
+ make the two columns stack on top of each other instead of next to each other */
+
+}
 @media screen and (max-width: 700px) {
   .row, .navbar {   
     flex-direction: column;
   }
 .col-md-3 {
-    width: 100%;
+    width: 10%;
     display: block;
     margin-bottom: 20px;
   }
